--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<title>CSS Zen Garden: The Beauty of CSS Design</title>
+	<link rel="stylesheet" type="text/css"
+          href="https://fonts.googleapis.com/css?family=Julius Sans One">
+    <link rel="stylesheet" type="text/css"
+    href="https://fonts.googleapis.com/css?family=Libre Baskerville">
+	
 
-	<link rel="stylesheet" media="screen" href="/1/1.css?v=8may2013">
-	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengarden.com/zengarden.xml">
-
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Dave Shea">
 	<meta name="description" content="A demonstration of what can be accomplished visually through CSS-based design.">
@@ -19,8 +22,9 @@
 
 	<section class="intro" id="zen-intro">
 		<header role="banner">
-			<h1>CSS Zen Garden</h1>
-			<h2>The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design</h2>
+			<img src="sergee-bee-8461.png" alt="placeholder+image">
+			<h1><span>CSS Zen Garden</span></h1>
+			<h2><span>The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design</span></h2>
 		</header>
 
 		<div class="summary" id="zen-summary" role="article">
@@ -36,7 +40,7 @@
 		</div>
 	</section>
 
-	<div class="main supporting" id="zen-supporting" role="main">
+	<div class="mainsupporting" id="zen-supporting" role="main">
 		<div class="explanation" id="zen-explanation" role="article">
 			<h3>So What is This About?</h3>
 			<p>There is a continuing need to show the power of <abbr title="Cascading Style Sheets">CSS</abbr>. The Zen Garden aims to excite, inspire, and encourage participation. To begin, view some of the existing designs in the list. Clicking on any one will load the style sheet into this very page. The <abbr title="HyperText Markup Language">HTML</abbr> remains the same, the only thing that has changed is the external <abbr title="Cascading Style Sheets">CSS</abbr> file. Yes, really.</p>
