--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           href="https://fonts.googleapis.com/css?family=Julius Sans One">
     <link rel="stylesheet" type="text/css"
     href="https://fonts.googleapis.com/css?family=Libre Baskerville">
-	
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300i" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
