--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     href="https://fonts.googleapis.com/css?family=Libre Baskerville">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300i" rel="stylesheet">
 
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Dave Shea">
 	<meta name="description" content="A demonstration of what can be accomplished visually through CSS-based design.">
@@ -22,7 +22,7 @@
 
 	<section class="intro" id="zen-intro">
 		<header role="banner">
-			<img src="sergee-bee-8461.png" alt="placeholder+image">
+			<img src="assets/sergee-bee-8461.png" alt="placeholder+image">
 			<h1><span>CSS Zen Garden</span></h1>
 			<h2><span>The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design</span></h2>
 		</header>
